Update and rename samsha.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Blog de ejemplo para mostrar la estructura básica de una página HTML">
   <meta name="keywords" content="blog, ejemplo, HTML, CSS, JavaScript">
   <meta name="author" content="Jermin Vasquez">
-  <link rel="stylesheet" href="estilos.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
